# reap-loop

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: codegen_problems.jsonl
docs/: APPENDIX_LOWBIT_QUANT_LADDER.md  ASYNC_PIPELINE_PLAN.md  AUDIT_BRIEF_20260721.md  AUDIT_RESULT_20260721.md  BOOT_PROBE_DESIGN.md  BUILD_TUTTO_DENTRO_SPEC.md  CLAIMS_CURRENT.md  CONSOLIDATION.md  DECISION_MODEL.md  DESIGN_0051_DYNAMIC_ARENA.md  DESIGN_0052_DYNAMIC_QUANTIZED_COLD_TIER.md  DESIGN_0053_IQ1_S_PROBATION_PROMOTION.md  DESIGN_0054_Q1_0_RESIDENT_BASE.md  DS4_CODING_BAKE_SELF_CONTAINED.md  DS4_EXPERIMENT_LEDGER_20260710.md  DS4_K23_ROTATION_POD_RESULTS_20260709.md  DS4_LEVER_ATLAS_20260724.md  DS4_LEVE_CATALOG.md  DS4_MOE_EXTERNAL_AUDIT_RANKED_20260714.md  DS4_ROUTING_RESIDENCY_TRACE.md  DS4_RUNNER_PROTOCOL.md  DS4_WINDOWS_NATIVE_STUDY_20260713.md  DYNAMIC_EXPERT_COMPRESSION_PLAN.md  EXPERIMENTS_LEDGER.md  FORK_SURVEY_20260710.md  FULL_ROUTER_NESTED_RESIDUAL_PLAN_20260718.md  G130_FLEET_STATUS_20260720.md  G130_U1_FIRST_ATTRIBUTION_RESULTS_20260720.md  G55_G57_WINDOWS_EXECUTION_RUNBOOK_20260715.md  G64_WINDOWS_K60_G46_LONG_QUALITY_PROTOCOL_20260716.md  HANDOFF_20260721_LIVE_MASK_STATE.md  HANDOFF_20260722_SESSION2.md  HANDOFF_20260723_COMPLETE.md  HANDOFF_20260724_NOTTE.md  HANDOFF_CLAUDE_20260713_0050_PORTING.md  HANDOFF_CODEX.md  HANDOFF_CODEX_20260713.md  HANDOFF_CODEX_20260719_G129_FRESH_TASK.md  HANDOFF_CODEX_20260720_G129_LOWBIT_SSD_WRAP.md  HANDOFF_CODEX_20260720_G130_FIX_PLAN_AND_TEST_PROTOCOL.md  (+40 more)
patches/: README.md
runs/: accuracy_vs_k_olmoe.csv  baseline_prompt.txt  download_all.err  modes_granite.csv  paper_ci_results.json  probe_fidelity_granite.json  validate_probe_dsv2.csv  (+2 more)
(+3945 files in other folders)
